kubernetes/deployment/underdefresco_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: underdefresco-oauth-service
  labels:
    run: underdefresco-oauth-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: underdefresco-oauth
---
apiVersion: v1
kind: Service
metadata:
  name: underdefresco-api-service
  labels:
    run: underdefresco-api-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: underdefresco-api
---
apiVersion: v1
kind: Service
metadata:
  name: latlonservice
  labels:
    run: latlonservice
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: underdefresco-getlatlon
---
apiVersion: v1
kind: Service
metadata:
  name: weatherservice
  labels:
    run: weatherservice
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: underdefresco-getweather
